err/infi.multipathtools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Logbook-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/emport'...
Listing './lib/python3.5/site-packages/emport-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/infi'...
Listing './lib/python3.5/site-packages/infi/exceptools'...
Listing './lib/python3.5/site-packages/infi/execute'...
Listing './lib/python3.5/site-packages/infi/instruct'...
Listing './lib/python3.5/site-packages/infi/instruct/buffer'...
Listing './lib/python3.5/site-packages/infi/instruct/buffer/reference'...
Listing './lib/python3.5/site-packages/infi/instruct/struct'...
Listing './lib/python3.5/site-packages/infi/instruct/utils'...
Listing './lib/python3.5/site-packages/infi/monotonic_time'...
Listing './lib/python3.5/site-packages/infi/multipathtools'...
Listing './lib/python3.5/site-packages/infi/multipathtools/client'...
Listing './lib/python3.5/site-packages/infi/multipathtools/config'...
Compiling './lib/python3.5/site-packages/infi/multipathtools/config/__init__.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (__init__.py, line 56)
Listing './lib/python3.5/site-packages/infi/multipathtools/connection'...
Listing './lib/python3.5/site-packages/infi/multipathtools/dtypes'...
Listing './lib/python3.5/site-packages/infi/multipathtools/errors'...
Listing './lib/python3.5/site-packages/infi/multipathtools/model'...
Compiling './lib/python3.5/site-packages/infi/multipathtools/model/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/multipathtools/model/__init__.py", line 94
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/infi/multipathtools/model/scripts.py'...
***   File "./lib/python3.5/site-packages/infi/multipathtools/model/scripts.py", line 10
    print dumps(devices, sort_keys=True, indent=4)
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/multipathtools/scripts'...
Compiling './lib/python3.5/site-packages/infi/multipathtools/scripts/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/multipathtools/scripts/__init__.py", line 5
    print client._send_and_receive("show config")
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/multipathtools/service'...
Listing './lib/python3.5/site-packages/infi/multipathtools/simulator'...
Compiling './lib/python3.5/site-packages/infi/multipathtools/simulator/__init__.py'...
***   File "./lib/python3.5/site-packages/infi/multipathtools/simulator/__init__.py", line 90
    print 'changing state of %s from %s' % (path_id, path.state)
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/infi/pyutils'...
Listing './lib/python3.5/site-packages/infi/pyutils/functors'...
Listing './lib/python3.5/site-packages/infi.exceptools-0.2.13.egg-info'...
Listing './lib/python3.5/site-packages/infi.execute-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/infi.instruct-0.6.31.egg-info'...
Listing './lib/python3.5/site-packages/infi.monotonic_time-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/infi.multipathtools-0.1.36.egg-info'...
Listing './lib/python3.5/site-packages/infi.pyutils-1.1.3.egg-info'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/munch'...
Listing './lib/python3.5/site-packages/munch-2.2.0.egg-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
